--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,10 @@ jobs:
           ls -l
           cd 
           ls -l
+      - name: test location 
+        run: |
+          ls -l
+          
           
           
  
