--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
           ls -l
       - name: bash
         run: |
-          echo "${{ secrets.TEST }}  "       
+          echo ${{ secrets.TEST }}      
           
           
           
