--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,10 @@ jobs:
         run: |
           ls -l
       - name: bash
+        env:
+          key1: ${{secrets.TEST}}
         run: |
-          echo ${{ secrets.TEST }}      
+          echo $key1
           
           
           
