--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,8 +9,6 @@ on:
 
 jobs:
   test:
-    env:
-      key1: ${{secrets.TEST}}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,8 +30,10 @@ jobs:
         run: |
           ls -l
       - name: bash
+        env:
+          TEST: ${{ secrets.TEST }}
         run: |
-          echo $key1
+          echo "$SUPER_SECRET"
           
           
           
