--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,30 +11,20 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: bash script
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Install nodejs
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: node try
         run: |
-          #!/bin/bash
-          for i in 1 2 3 4 5
-          do
-            echo "Welcome $i times"
-          done
-      - name: ls
-        run: |
-          node -v 
-          npm -v 
-          ls -l
-          cd 
-          ls -l
-      - name: test location 
-        run: |
-          ls -l
-      - name: bash
-        env:
-          TEST: ${{ secrets.TEST }}
-        run: |
-          echo "$TEST"
-          
+          node -v
+          node
+          let a= ${{ secrets.TEST }}
+          console.log(a)
           
           
  
