--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           node -v
           node
-          let a=$TEST
+          let a="$TEST"
           console.log(a)
           .exit
           
