--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Install nodejs
-      -  uses: actions/checkout@v2
-      -  uses: aws-actions/setup-sam@v0
-      -  uses: aws-actions/configure-aws-credentials@v1
+        uses: actions/checkout@v2
+        uses: aws-actions/setup-sam@v0
+        uses: aws-actions/configure-aws-credentials@v1
  
       
       - name: node try
