--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,18 +13,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: sam
-        uses: aws-actions/setup-sam@v0
+
  
-      
       - name: node try
         env:
           TEST: ${{ secrets.DIR }}
-        run: |
-          a=$TEST
-          echo $a
-          ls 
-          sam --version
+        run: echo "$TEST"
         
           
  
