--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,10 +19,8 @@ jobs:
         env:
           TEST: ${{ secrets.DIR }}
         run: | 
-          touch .env
-          echo API_ENDPOINT="https://xxx.execute-api.us-west-2.amazonaws.com" >> .env
-          echo API_KEY=${{ secrets.DIR }} >> .env
-          cat .env
+          echo $TEST
+
         
           
  
